Added syntax highlighting via highlight.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       }
     </style>
 <link rel="stylesheet" href="github-markdown.css">
+<link rel="stylesheet" href="github-highlight.css">
 <script src="/socket.io/socket.io.js"></script>
 <script>
       var socket = io();
